--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 
 </head>
 <body>
-    
+    <button id="startButton" onclick="startGame()">Start Game</button>
+    <section id="guessArea">
+        <h2 id="wordToGuess"></h2>
+        <h2 id="underscores"></h2>
+    </section>
+    <p id="timer">0.00</p>
+    <section id="stats">
+        <h3 id="winStat">0</h3>
+        <h3 id="lossStat">0</h3>
+    </section>
     <script src="main.js"></script>
 </body>
 </html>
